--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <button v-on:click="age++">Increase age</button>
       <button v-on:click="age--">Decrease age</button>
-      <div @click="changeTitle">Change book title</div>
+      <div @click="changeTitle('arg author')">Change book title</div>
     </div>
 
     <script src="app.js"></script>
