--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content=""width=device-width, initial-sclae="1.0">
+    <meta name="viewport" content="width=device-width", initial-sclae="1.0">
     <title>Learning Vue</title>
     <script src="https://unpkg.com/vue@3.0.2"></script>
   </head>
@@ -9,12 +9,14 @@
     <h1>Hello Vue</h1>
 
     <div id="app">
-      <p>{{ title }} - {{ author }} - {{ age }}</p>
-
-      <button v-on:click="age++">Increase age</button>
-      <button v-on:click="age--">Decrease age</button>
-      <div @click="changeTitle('arg author')">Change book title</div>
+      <div v-if="showBooks">
+        <p>{{ title }} - {{ author }} - {{ age }}</p>
+      </div>
+      <button @click="toggleShowBooks">
+        <span>Hide Books</span>
+      </button>
     </div>
+
 
     <script src="app.js"></script>
   </body>
