truthy, falsyを切り替える

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <p>{{ title }} - {{ author }} - {{ age }}</p>
       </div>
       <button @click="toggleShowBooks">
-        <span>Hide Books</span>
+        <span v-if="showBooks">Hide Books</span>
+        <span v-if="!showBooks">Show Books</span>
       </button>
     </div>
 
