v-else, v-ifを使用する

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       </div>
       <button @click="toggleShowBooks">
         <span v-if="showBooks">Hide Books</span>
-        <span v-if="!showBooks">Show Books</span>
+        <span v-else>Show Books</span>
       </button>
+
+      <div v-show="showBooks">currently showing books</div>
     </div>
 
 
