--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta name="viewport" content="width=device-width", initial-sclae="1.0">
     <title>Learning Vue</title>
     <script src="https://unpkg.com/vue@3.0.2"></script>
+    <style>
+      .box {
+        padding: 100px 0;
+        width: 400px;
+        text-align: center;
+        background: #ddd;
+        margin: 20px;
+        display: inline-block;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello Vue</h1>
@@ -12,12 +22,18 @@
       <div v-if="showBooks">
         <p>{{ title }} - {{ author }} - {{ age }}</p>
       </div>
+
       <button @click="toggleShowBooks">
         <span v-if="showBooks">Hide Books</span>
         <span v-else>Show Books</span>
       </button>
 
-      <div v-show="showBooks">currently showing books</div>
+      <br>
+      <!-- mouse events -->
+      <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
+      <div class="box" @mouseleave="handleEvent">mouseleave</div>
+      <div class="box" @dblclick="handleEvent">double click</div>
+      <div class="box"></div>
     </div>
 
 
