--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div id="app">
       <div v-if="showBooks">
+        <a :href="url">website</a>
         <ul>
           <li v-for="book in books">
             <h3>{{ book.title }}</h3>
