v-bindを使い、動的にパスを生成する

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
     <div id="app">
       <div v-if="showBooks">
-        <a :href="url">website</a>
+        <!-- <a :href="url">website</a> -->
         <ul>
           <li v-for="book in books">
+            <img :src="book.img" :alt="book.title">
             <h3>{{ book.title }}</h3>
             <p>{{ book.author }}</p>
           </li>
