--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div v-if="showBooks">
         <!-- <a :href="url">website</a> -->
         <ul>
-          <li v-for="book in books" :class="{ fav: book.isFav }" @click="toggleChangeColor(book)">
+          <li v-for="book in filteredBooks" :class="{ fav: book.isFav }" @click="toggleChangeColor(book)">
             <img :src="book.img" :alt="book.title">
             <h3>{{ book.title }}</h3>
             <p>{{ book.author }}</p>
